# Azure-Enterperise-RAG-backend

./: .gitignore  README.md  main.py  one_time.py  pyproject.toml
core/: auth copy.py  auth.py  azure_auth.py  config.py
helpers/: create_index.py  embeddings.py  load_docs.py  openai_client.py  retrieval.py  search_client.py
parsers/: pdf_parser.py
routes/: health.py  upload.py
services/: chunking.py  embedding_service.py  ingestion_service.py  search_service.py
storage/: blob_storage.py
