[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-search-documents>=12.0.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "openai>=2.36.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "requests>=2.34.0",
    "uvicorn[standard]>=0.24.0",
]
