[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "azure-identity>=1.25.3",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.29.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "openai>=2.36.0",
    "pyjwt>=2.12.1",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "requests>=2.34.0",
    "uvicorn[standard]>=0.24.0",
]
